# ParallelPSO

./: CHANGELOG.md  PSO.cabal  README.md  stack.yaml
.stack-work/: stack.sqlite3
app/: parallelPso.hs  parallelPso2.hs  pso.hs  test.hs  testParallel.hs
