cabal-version:      2.4
name:               PSO
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             SiyiHong
maintainer:         sh4325@columbia.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable test
  hs-source-dirs: app
  main-is: test.hs
  other-modules: PSO
  build-depends: base, random, time
  default-language: Haskell2010

executable parallelTest
  hs-source-dirs: app
  main-is: testParallel.hs
  other-modules: ParallelPSO
  build-depends: base, random, parallel, deepseq, time
  default-language: Haskell2010